--- a/style.css
+++ b/style.css
@@ -57,6 +57,13 @@
 
 /* Global Styles */
 
+/* These apply to every page!! */
+
+html,
+body {
+    max-width: 100vw;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -71,6 +78,23 @@ body {
     visibility: hidden;
 }
 
+main {
+    /* width: 100%;
+    max-width: 800px;
+    margin: 0 auto; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section {
+    width: 100%;
+    max-width: 800px;
+
+}
+
+/* typography */
+
 h1,
 h2,
 h3,
@@ -79,10 +103,58 @@ h4 {
     font-weight: 400;
 }
 
+h1 {
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50.6px;
+    background: linear-gradient(92deg, #64CEFF 8.59%, #FFC300 99.59%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* 110% */
+}
+
+h2 {
+    font-size: 38.64px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 42.55px;
+    /* 110.119% */
+}
+
+h3 {
+    font-size: 18.4px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27.6px;
+    /* 150% */
+}
+
+p,
+li {
+    font-size: 18.4px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27.6px;
+    /* 150% */
+}
+
+img {
+    width: 100%;
+    max-width: 600px;
+
+}
+
 a:focus,
 button:focus {
     outline: 2px solid #ff0040;
 
+}
+
+.full-width {
+    width: 100vw;
+    margin-left: -20px;
 }
 
 /* Header Styles */
@@ -170,14 +242,14 @@ header nav {
 
 /* Main section */
 
-main {
+/* main {
+    padding: 20px;
+}  */
+
+section {
     padding: 20px;
 }
 
-img,
-iframe {
-    max-width: 100%;
-}
 
 
 /* Footer Styles */
@@ -234,6 +306,24 @@ footer p:last-child {
 }
 
 @media (min-width: 480px) {
+    h1 {
+        font-size: 73px;
+        line-height: 1.5em;
+
+    }
+
+    h3 {
+        font-size: 24px;
+    }
+
+    header {
+        min-height: 250px;
+    }
+
+    .topnav a {
+        font-size: 24px;
+    }
+
     .topnav .icon {
         display: none;
     }
